tdf#49856 Fix level 0 bullet/style on ppt import

Long ago, styles were read in starting in slot 1 and
slot 0 was backfilled using the last read rule.
That changed in 8a64144fddde61dd050da4cb93b4a7242a495bb2 when
stuff started at 0; unfortunately the back filling at 0
code was left in, overwritting level 0.

Remove it, fixing cases which used level 0; in particular
a shift-tab to go up a level ended up with the wrong
style.

Fixes: 8a64144fddde61dd050da4cb93b4a7242a495bb2
Change-Id: Ic29f3fca9f1c809de69a1d83fca017bdafdd2447
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102542
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>